apps/transmission/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: transmission
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      run: transmission
  template:
    metadata:
      labels:
        run: transmission
    spec:
      containers:
        - name: transmission
          image: linuxserver/transmission
          ports:
            - containerPort: 9091
              name: webui
              protocol: TCP
            - containerPort: 51413
              name: torrent-tcp
              protocol: TCP
            - containerPort: 51413
              name: torrent-udp
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: "/config"
              name: config
            - mountPath: "/downloads"
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
